--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap');
+
 
 @tailwind base;
 @tailwind components;
@@ -16,4 +18,11 @@ html, body, #root {
 
 html {
   scroll-behavior: smooth;
+}
+
+body {
+  font-family: 'Space Mono', monospace;
+  font-family: "Inter", sans-serif;
+  
+  
 }
